tests/ui/dst/dst-bad-coerce4.stderr
error[E0308]: mismatched types
  --> $DIR/dst-bad-coerce4.rs:12:32
   |
LL |     let f2: &Fat<[isize; 3]> = f1;
   |             ----------------   ^^ expected `&Fat<[isize; 3]>`, found `&Fat<[isize]>`
   |             |
   |             expected due to this
   |
   = note: expected reference `&Fat<[isize; 3]>`
              found reference `&Fat<[isize]>`

error[E0308]: mismatched types
  --> $DIR/dst-bad-coerce4.rs:20:30
   |
LL |     let f2: &([isize; 3],) = f1;
   |             --------------   ^^ expected `&([isize; 3],)`, found `&([isize],)`
   |             |
   |             expected due to this
   |
   = note: expected reference `&([isize; 3],)`
              found reference `&([isize],)`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
